<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/iv_home_screen_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/splash_logo2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:id="@+id/tv_home_screen_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_home_screen_image"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/qr_code_generator"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_generate_qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/generate_qr_code"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_home_screen_app_title"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/btn_read_qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/read_qr_code"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_generate_qr_code"
        android:textSize="22sp"/>


</RelativeLayout>